# axiom

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
data/: room_01.json
runtime/: Cargo.toml
runtime/src/: data_parser.rs  engine.rs  main.rs
studio/: Cargo.toml  gpu_preference.txt  menu_export.json
studio/projects/: test.axiom  test.axiom.bak
studio/src/: app.rs  main.rs
studio/src/core/: events.rs  interaction.rs  mod.rs
studio/src/data/: border.rs  level.rs  mod.rs  scene.rs  settings.rs  texture.rs  texture_presets.rs
studio/src/render/: csg.rs  gpu.rs  mod.rs  object_viewport.rs  texture_composer.rs
studio/src/render/shaders/: main.wgsl
studio/src/ui/: inspector.rs  level_editor.rs  object_editor.rs  object_editor_cache.rs  settings_modal.rs  texture_editor.rs
studio_cpu_backup/: Cargo.toml
studio_cpu_backup/projects/: test.axiom
studio_cpu_backup/src/: app.rs  main.rs  main_refactor_plan.md
studio_cpu_backup/src/core/: types.rs
studio_cpu_backup/src/data/: element.rs  layer.rs  object.rs  scene.rs  settings.rs
studio_cpu_backup/src/render/: canvas.rs  csg.rs  mod.rs  object_viewport.rs  texture_composer.rs
studio_cpu_backup/src/ui/: explorer.rs  mod.rs  object_editor.rs  settings_modal.rs  texture_editor.rs  toolbar.rs  widgets.rs
