[package]
name = "studio"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.27.2", features = ["wgpu"] }
egui = "0.27.2"
fasteval = "0.2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = "0.19"
bytemuck = { version = "1.15", features = ["derive"] }
glam = "0.27"
bincode = "1.3"
earcutr = "0.5.0"
